--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -45,7 +45,9 @@
 
             {% if results %}
             <div class="button-container">
-                <button type="submit" id="saveButton">Update to Database</button> 
+                <button type="submit" id="saveButton" class="btn-secondary">
+                    <i class="fas fa-database" style="margin-right: 5px;"></i>Save to Database
+                </button>
             </div>
 
             <h3>Uploaded Files:</h3>
