--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -605,9 +605,8 @@ input, select{
     justify-content: flex-start; /* left aligned */
 }
 
-.btn-primary, 
-.btn-secondary, 
-.btn-warning {
+
+.btn-primary{
     display: inline-flex;
     align-items: center;
     padding: 10px 18px;
@@ -618,7 +617,7 @@ input, select{
     font-weight: 500;
 }
 
-/* Refresh button */
+/* Save button */
 .btn-primary {
     background-color: #4CAF50;
     color: white;
@@ -627,26 +626,6 @@ input, select{
 .btn-primary:hover {
     background-color: #43a047;
 }
-
-/* Save to DB button */
-.btn-secondary {
-    background-color: #2196F3;
-    color: white;
-}
-
-.btn-secondary:hover {
-    background-color: #1976d2;
-}
-
-/* Re authorised button */
-.btn-primary {
-    background-color: #007bff;
-    color: #fff;
-}
-.btn-primary:hover {
-    background-color: #0069d9;
-}   
-
 
 
 
