--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -34,18 +34,18 @@
                     <div id="timetableSelectedFileName" class="file-name-display"></div>
                 </div>
             </label>
-            <input type="file" id="timetable_list" name="timetable_file[]" value="preview" accept=".pdf" style="display: none;" multiple>
+            <input type="file" id="timetable_list" name="timetable_file[]" accept=".pdf" style="display: none;" multiple>
             <input type="hidden" name="form_type" value="upload">
             <br>
 
             <!-- Upload Form Submit -->
             <div class="button-wrapper">
-                <button type="submit" id="uploadButton">Upload and Preview Lecturer Timetable</button>
+                <button type="submit" name="action" value="preview" id="uploadButton">Upload and Preview Lecturer Timetable</button>
             </div>
 
             {% if results %}
             <div class="button-container">
-                <button type="submit" id="saveButton" class="btn-primary" value="save">
+                <button type="submit" id="saveButton" class="btn-primary" name="action" value="save">
                     <i class="fas fa-database" style="margin-right: 5px;"></i>Save to Database
                 </button>
             </div>
